--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,10 @@ li:hover span.delete-item a {
   color: red;
 }
 
+.success {
+  color: green;
+}
+
 .footer a {
   padding-left: 2px;
   padding-right: 2px;
